Added file manager library